@@ -569,7 +569,7 @@ Commands.Chat.Console=*Console*
 Commands.Cooldowns.Header=[[GOLD]]--= [[GREEN]]mcMMO Ability Cooldowns[[GOLD]] =--
 Commands.Cooldowns.Row.N=\  [[RED]]{0}[[WHITE]] - [[GOLD]]{1} seconds left
 Commands.Cooldowns.Row.Y=\  [[AQUA]]{0}[[WHITE]] - [[DARK_GREEN]]Ready!
-Commands.Database.Cooldown=You must wait {0} seconds before using this command again.
+Commands.Database.CooldownMS=You must wait {0} milliseconds before using this command again.
 Commands.Database.Processing=Your previous command is still being processed. Please wait.
 Commands.Disabled=This command is disabled.
 Commands.DoesNotExist= [[RED]]Player does not exist in the database!
